# OOP---Assignment-3

./: README.md
GUIProject - task 2/: AI_Player.cpp  AI_Player.h  BoardGame_Classes.hpp  CMakeLists.txt  GameManager.cpp  Player.cpp  RandomPlayer.cpp  X_O_Board.cpp  boardgame_classes.h  collectfourboard.cpp  collectfourboard.h  collectfourplayer.cpp  collectfourplayer.h  connectfourgame.cpp  connectfourgame.h  connectfourgame.ui  fivexfive_gamemanager.cpp  fivexfive_gamemanager.h  fivexfiveboard.cpp  fivexfiveboard.h  fivexfivegame.cpp  fivexfivegame.h  fivexfivegame.ui  fivexfiveplayer.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  normalgame.cpp  normalgame.h  normalgame.ui  pyramid_x_o_board.cpp  pyramid_x_o_board.h  pyramid_x_o_player.cpp  pyramid_x_o_player.h  pyramidgame.cpp  pyramidgame.h  pyramidgame.ui
Task 2/: AI_Player.cpp  AI_Player.h  BoardGame_Classes.hpp  CMakeLists.txt  CollectFourBoard.cpp  CollectFourBoard.h  CollectFourPlayer.h  FiveXFiveBoard.cpp  FiveXFiveBoard.h  FiveXFivePlayer.cpp  FiveXFive_GameManager.cpp  FiveXFive_GameManager.h  GameManager.cpp  Player.cpp  Pyramid_X_O_AI.cpp  Pyramid_X_O_AI.h  Pyramid_X_O_Board.cpp  Pyramid_X_O_Board.h  Pyramid_X_O_Player.cpp  main.cpp
Task 2/part two collect four game/: BoardGame_Classes.hpp  CMakeLists.txt  GameManager.cpp  Player.cpp  RandomPlayer.cpp  board.cpp  main.cpp
Tast 1/: A3_SheetPb01_20220013.cpp  A3_SheetPb02_20220309.cpp  A3_SheetPb04_20220013.cpp  A3_SheetPb05_20220309.cpp  CMakeLists.txt
build-GUIProject---task-2-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  (+3 more)
mohamed final test/: BoardGame_Classes.hpp  CMakeLists.txt  CollectFourBoard.cpp  CollectFourBoard.h  CollectFourPlayer.cpp  FiveXFiveBoard.cpp  FiveXFiveBoard.h  FiveXFivePlayer.h  FiveXFive_GameManager.cpp  Pyramid_X_O_AI.cpp  Pyramid_X_O_AI.h  Pyramid_X_O_Board.cpp  Pyramid_X_O_Board.h  main.cpp
(+118 files in other folders)
